--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,7 @@
       <div class="header-item">Arriving</div>
       <div class="header-item">Departing</div>
     </div>
-    <div class="table-row">
-      <div class="table-item">DFW</div>
-      <div class="table-item">15:00 PM CST</div>
-      <div class="table-item">50</div>
-      <div class="table-item">32</div>
-    </div>
+    <app-flight-data></app-flight-data>
     <!-- Add more table rows as needed -->
   </div>
 </div>
