--- a/src/app/components/flight-data/flight-data.component.html
+++ b/src/app/components/flight-data/flight-data.component.html
@@ -1,6 +1,10 @@
-<div class="table-row">
-  <div class="table-item">DFW</div>
-  <div class="table-item">15:00 PM CST</div>
-  <div class="table-item">50</div>
-  <div class="table-item">32</div>
-</div>
+  @for (flight of allFlights; track flight.airport) {
+    <div class="table-row">
+      <div class="table-item">{{ flight.airport }}</div>
+      <div class="table-item">{{ flight.time }}</div>
+      <div class="table-item">{{ flight.arriving }}</div>
+      <div class="table-item">{{ flight.departing }}</div>
+    </div>
+  } @empty {
+    <span>No Flight Data Today</span>
+  }
